--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,16 @@
     direction: ltr;
   }
 }
+
+.page-transition {
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.399);
+  transform: translateY(200px);
+  filter: blur(12px);
+  overflow-x: hidden;
+}
+
+.loading-transition {
+  opacity: 1;
+  transform: translateY(-200px) translateX(-50%);
+}
