added a bit styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -117,3 +117,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+.slick-slide > div {
+  margin: 0 10px;
+}
+
+.slick-dots li.slick-active button:before {
+  color: white !important;
+}
