--- a/app/globals.css
+++ b/app/globals.css
@@ -118,6 +118,10 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .slick-slide > div {
   margin: 0 10px;
 }
@@ -134,4 +138,39 @@
   background-size: cover;
   background-position: center;
   opacity: 90%;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-button-next, .swiper-button-prev {
+  width: 48px;
+  height: 48px;
+  background: #12122f;
+  border: 2px solid #1d1d3d;
+  border-radius: 100%;
+}
+
+.swiper-button-next::after, .swiper-button-prev::after {
+  color: #fff;
+  font-size: 15px;
 }
