--- a/app/globals.css
+++ b/app/globals.css
@@ -130,10 +130,12 @@ html {
   color: white !important;
 }
 
-.bg-festival {
+#banner {
   width: 100%;
-  height: 100vh;
-  background-image: linear-gradient(rgba(202, 58, 121, 1), rgba(61, 21, 153, 1)),
+  background-image: linear-gradient(120deg,
+      rgba(202, 58, 121, 0.9),
+      rgba(61, 21, 153, 0.9) 25%
+    ),
     url("../public/assets/images/home-page/festival.png");
   background-size: cover;
   background-position: center;
@@ -162,7 +164,8 @@ html {
   object-fit: cover;
 }
 
-.swiper-button-next, .swiper-button-prev {
+.swiper-button-next,
+.swiper-button-prev {
   width: 48px;
   height: 48px;
   background: #12122f;
@@ -170,7 +173,8 @@ html {
   border-radius: 100%;
 }
 
-.swiper-button-next::after, .swiper-button-prev::after {
+.swiper-button-next::after,
+.swiper-button-prev::after {
   color: #fff;
   font-size: 15px;
 }
